[project]
name = "Waypoint_Package"
version = "1.0.0"
authors = [
  { name="Ronald Roldan", email="rabroldan06@gmail.com" },
]
description = "Waypoint_package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rabroldan/Waypoint"


[tool.black]
line-length = 80 

[tool.ruff]
ignore = [
    "F541",  #f-string without any placeholders.
    "E712",  #Comparison to `True` should be `cond is True` or `if cond:' Comparison to `False` should be `cond is False` or `if not cond:`
]